@@ -1,6 +1,6 @@
 Package: rama
 Title: Robust Analysis of MicroArrays
-Version: 1.1.2
+Version: 1.1.3
 Author: Raphael Gottardo
 Description: Robust estimation of cDNA microarray intensities with
         replicates. The package uses a Bayesian hierarchical model for
@@ -10,4 +10,4 @@ Description: Robust estimation of cDNA microarray intensities with
         nonconstant variance.
 Maintainer: Raphael Gottardo <raph@stat.ubc.ca>
 License: GPL version 2 or newer
-biocViews: Microarray,TwoChannel,QualityControl,Preprocessing
+biocViews: Microarray, TwoChannel, QualityControl, Preprocessing
